--- a/src/App.css
+++ b/src/App.css
@@ -141,8 +141,8 @@ a {
 #projectssection {
   width:100%;
   display:grid;
-  grid-template-columns: repeat(auto-fill, minmax(390px, 1fr));
-  grid-auto-rows:240px;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  grid-auto-rows:213px;
   row-gap:20px;
   justify-items:center;
   margin-bottom:80px;
@@ -158,8 +158,8 @@ a {
   align-items:center;
   justify-content:center;
   position:absolute;
-  left:81%;
-  top:17%;
+  right:5%;
+  top:5%;
 }
 
 #closeIcon:hover {
